--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -1,7 +1,7 @@
 pipeline {
     agent {
         docker {
-            image 'cloudworldt/maven:latest'
+            image 'shabbirsyed103/maven:latest'
             args '--user root -v /var/run/docker.sock:/var/run/docker.sock'
         }
     }
