--- a/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
+++ b/java-maven-sonar-argocd-helm-k8s/spring-boot-app/JenkinsFile
@@ -49,7 +49,7 @@ pipeline {
 
         stage('Update Deployment File') {
             environment {
-                GIT_REPO_NAME = "Jen-Argocd"
+                GIT_REPO_NAME = "tempargo"
                 GIT_USER_NAME = "shabbirsyed103"
             }
             steps {
